2367.   [bug]           Improve counting of dns_resstatscounter_retry
                        [RT #18030]

2366.	[bug]		Adb shutdown race. [RT #18021]

2365.   [bug]           Fix a bug that caused dns_acl_isany() to return
                        spurious results. [RT #18000]

2364.	[bug]		named could trigger a assertion when serving a
			malformed signed zone. [RT #17828]

2363.	[port]		sunos: pre-set "lt_cv_sys_max_cmd_len=4096;".
			[RT #17513]

2362.   [cleanup]       Make "rrset-order fixed" a compile-time option.
                        settable by "./configure --enable-fixed-rrset".
                        Disabled by default. [RT #17977]

2361.	[bug]		"recursion" statistics counter could be counted
			multiple times for a single query.  [RT #17990]

2360.	[bug]		Fix a condition where we release a database version
			(which may acquire a lock) while holding the lock.

2359.	[bug]		Fix NSID bug. [RT #17942]

2358.	[doc]		Update host's default query description. [RT #17934]

2357.	[port]		Don't use OpenSSL's engine support in versions before
			OpenSSL 0.9.7f. [RT #17922]

2356.	[bug]		Builtin mutex profiler was not scalable enough.
			[RT #17436]

2355.	[func]		Extend the number statistics counters available.
			[RT #17590]

2354.	[bug]		Failed to initialise sone rdatasetheader_t elements.
			[RT #17927]

2353.	[func]		Add support for Name Server ID (RFC 5001).
			'dig +nsid' requests NSID from server.
			'request-nsid yes;' causes recursive server to send
			NSID requests to upstream servers.  Server responds
			to NSID requests with the string configured by
			'server-id' option.  [RT #17091]

2352.	[bug]		Various GSS_API fixups. [RT #17729]

2351.	[bug]		convertxsl.pl generated very long lines. [RT #17906]

2350.	[port]		win32: IPv6 support. [RT #17797]

2349.	[func]		Provide incremental re-signing support for secure
			dynamic zones. [RT #1091]

2348.	[func]		Use the EVP interface to OpenSSL. Add PKCS#11 support.